--- a/hito1/exploracion.ipynb
+++ b/hito1/exploracion.ipynb
@@ -1262,12 +1262,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**TO DO**: *Decir en bonito que las preguntas de abajo es interesante para responder con DM*\n",
     "\n",
-    "- Se puede ver la fuga igual, si es que aumenta la mtrpicula en pedagogía, se puede identificar cuales carreras bajan matricula?\n",
-    "-  ver si aumentaron los puntajes en la matrícula de carreras de pedagogía\n",
-    "-  siguiendo esta línea, hay una columna que tiene el área de conocimiento, quizás se puede ver la distribución de género en distintas áreas y cómo ha ido cambiando en los años\n",
-    "-  hay una columna del año inicio actividad, que es el año en que se abrió la carrera (no tiene nulos), podría verse igual, ligado al área de conocimiento, qué tipo de carreras de abren más ahora (esperando que sea carreras más tecnológicas y de gestión) y que quizás las humanistas van quedando un poco más atrás"
+    "\n",
+    "- ¿es posible que esta fuga de nuevos estudiantes se deba a un incremento en las matrículas de otras carreras?\n",
+    "- ¿que ha ocurrido con los puntajes de corte de las carreras de pedagogía?\n",
+    "- ¿a que área pertenecen las carreras que han abierto ultimamente?\n",
+    "- ¿que ha ocurrido con la distribucion de estudiantes por sexo?"
    ]
   },
   {
