Update exploracion to match informe

--- a/hito1/exploracion.ipynb
+++ b/hito1/exploracion.ipynb
@@ -840,7 +840,19 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Preguntas de interés"
+    "## Preguntas de interés\n",
+    "Preguntas a que se podrían resolver usando la minería de datos:\n",
+    "1. ¿Es posible predecir el puntaje de corte esperado para el próximo año a partir de las tendencias históricas?\n",
+    "2. ¿Existen grupos con características comunes? ¿Se pueden agrupar instituciones que tienen perfiles similares de arancel y puntaje de corte? ¿Hay alguna otra característica que pueda relacionar instituciones?\n",
+    "\n",
+    "Ambos puntos se podrían responder utilizando la minería de datos como herramienta. A partir del estudio inicial del dataset se cree que hay datos suficientes para responder las preguntas antes planteadas. Resulta interesante construir un predictor de puntajes de corte creado con datos reales, y no con simples estimaciones, o analizar el perfil de las instituciones de acuerdo a las características que se puedan extraer a partir de los atributos de la base de datos, ya que mediante simple análisis visual de las bases no siempre es directa la relación entre características de miles de datos disponibles."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Hallazgos"
    ]
   },
   {
@@ -1311,14 +1323,28 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": [
-    "**TO DO:** Explicar gran diferencia, decir q sería interesante saber por qué y ver si los programas de motivación para mujeres en STEM han tenido algún efecto en esto."
-   ]
+   "source": []
   },
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "**Distribución de tareas**\n",
+    "\n",
+    "A continuación se presenta la distribución de tareas y aportes para el Hito 1. Es importante mencionar que se tuvieron reuniones de coordinación del grupo, y que todas las ideas fueron conversadas por los 5 integrantes. A partir de esto, las tareas individuales fueron:\n",
+    "\n",
+    "1. Paola Silva: Apoyó en la confección de la presentación, redacción del informe y construcción de gráficos.\n",
+    "\n",
+    "2. Cynthia Vega: Confección de la presentación.\n",
+    "\n",
+    "3. Pablo Skewes: Confección de gráficos para el hito. Aporte en la confección del informe.\n",
+    "\n",
+    "4. Isaias Venegas: Redacción de parte del informe y encargado de presentar. \n",
+    "\n",
+    "5. Carla Guzmán Roa: Exploración inicial del dataset, propuesta de preguntas a resolver a grandes rasgos a partir del dataset para compartirlo con el grupo. Pequeño aporte al informe y encargada de presentar.\n",
+    "\n",
+    "Inicialmente se había decidido trabajar con un dataset privado correspondiente al comportamiento de los estudiantes en cursos realizados de forma híbrida. Sin embargo, ante diversos problemas que se presentaron durante la exploración del archivo proporcionado se desistió de esa opción. Aún así, creemos necesario mencionar el trabajo hecho por Pablo e Isaías en tratar de explotar los datos a partir del archivo mencionado."
+   ]
   }
  ],
  "metadata": {
