update informe hito 2

--- a/hito2/informe.ipynb
+++ b/hito2/informe.ipynb
@@ -274,7 +274,7 @@
     "A continuación, se utiliza una herramienta de caracterización de datos que implementamos, la cual se encarga de:\n",
     "- Transformar las variables categóricas para ser utilizadas en los algoritmos de clustering\n",
     "- Eliminar columnas con alta correlación\n",
-    "- Obtener el número óptimo de clusters utilizando el método del codo\n",
+    "- Obtener el número óptimo de clusters utilizando el método del codo (se obtienen 6)\n",
     "- Aplicar KMeans con el número óptimo de clusters obtenido\n",
     "- Aplciar PCA para reducir la dimensionalidad de los datos y poder visualizarlos en 2D\n",
     "\n",
@@ -288,16 +288,10 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "De los resultados obtenidos, y analizando el dataframe resultante de nuestra pipeline, se puede observar que efectivamente se forman 6 clusters, sin embargo, no se logra distinguir una característica que agrupe a los clusters. Esto principalmente ya que el procesamiento usado en la pipeline multiplicó demasiado la cantidad de columnas (OneHotEncoding, etc). \n",
     "\n",
-    "Luego, se realiza una reducción de dimensionalidad utilizando PCA, con el fin de poder visualizar los datos en 2D. Finalmente, se realiza el clustering utilizando el algoritmo K-means, con un número de clusters igual a 6."
+    "Por lo tanto, se propone realizar un nuevo preprocesamiento de los datos, eliminando aun más columnas y realizando un OneHotEncoding más restrictivo, para así poder obtener resultados más claros y explotables. Una forma de restringir la cantidad de columnas de forma considerale, sería de agrupas las categorías de las columnnas categóricas en grupos más grandes, por ejemplo, agrupar las carreras por área de conocimiento, etc. Y además de botar aquellas categorías que aparezcan muy poco y que provoquen que se generen demasiadas columnas."
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "code",
