Match anexo and exploracion files

--- a/hito2/exploracion.ipynb
+++ b/hito2/exploracion.ipynb
@@ -306,15 +306,6 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Notemos que la base de datos contiene la información de carreras por año, en donde hay data del año sobre las matriculas, la carrera, la institución. Hay columnas que de por sí no nos entregan información relevante a lo que buscamos o se puede extraer de otras columnas, como el orden geografico de la región, las menciones o especialidades, el idgenerocarrera, el nombre del campus, cód. campus y sede, Código SIES.\n",
-    "\n",
-    "Por otro lado, si bien nos interesan los puntajes, con la información del premedio basta para nuestro analisis"
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": 9,
    "metadata": {},
@@ -432,13 +423,6 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "De esto podemos notar que hay columnas que tienen pocos valores unicos, por lo que deben ser una especie de clasificación y por tanto es importanter ver si estas entregan una información relevante."
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": 9,
    "metadata": {},
@@ -525,10 +509,14 @@
    ]
   },
   {
-   "cell_type": "markdown",
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
+   "outputs": [],
    "source": [
-    "Según lo que estamos buscando, dentro de las clasificaciones, la columna \"Clasificación2\" entrega una sub caracterizacipon de la columna \"Clasificación1\" por lo que no entrega información relevante según nuestro enfoque. Por otro lado, se puede observar que en la columna \"Tipo Moneda\" en verdad son loslo 2 opciones que una de ellas está escrita de forma distinta por lo que hay que corregir esa columna. Por último, la comuna de \"Pregrado/posgrado\" hay que revisar la frecuencia de estas, para elegir si enfocarnos en las matrículas especificas de alguna de ellas o en general."
+    "# contamos la cantidad de registros de pregrado vs los de posgrado\n",
+    "# porcentaje\n",
+    "df[\"Pregrado/Posgrado\"].value_counts(normalize=True)"
    ]
   },
   {
@@ -634,28 +622,13 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Debido a que el porcentaje de nulos en la parte de puntajes es extremadamente alta, modificaremos el dataset para obtener registros con una menor tasa de nulos."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 14,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# df_inmueble = pd.read_excel('./data/indices_institucional_2005_2022.xlsx', sheet_name='Inmuebles')\n",
-    "# df_labs = pd.read_excel('./data/indices_institucional_2005_2022.xlsx', sheet_name='Laboratorios y Talleres')"
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Preprocesamiento útil para predicción de puntajes de corte\n",
+    "\n",
     "# quitamos FFAA, IP, CFT, Posgrado, Privadas y carreras vespertinas\n",
     "# df_limpio = df[\n",
     "#     (df[\"Tipo Institución\"] == \"Univ.\")\n",
@@ -737,7 +710,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Clustering"
+    "## Profiler"
    ]
   },
   {
